# limpet

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PHILOSOPHY.md  README.md  ROADMAP.md  SECURITY.md  SPEC.md  glama.json  install.ps1  install.sh  server.json
.github/workflows/: ci.yml  mcp-registry.yml  release.yml
.limpet/: memory.jsonl
.playwright-mcp/: page-2026-07-03T13-05-25-662Z.yml  page-2026-07-03T13-05-47-240Z.yml
bench/: token_savings.py
bench/fixture-repo/: embedding.go
bench/fixture-repo/admin/: dashboard.php
bench/fixture-repo/assets/: api.ts  app.ts
bench/fixture-repo/src/auth/: session.php
bench/fixture-repo/src/export/: csv.php
bench/fixture-repo/src/scan/: base_scanner.php  feed_scanner.php  queue.php  rules.php  scanner.php
bench/fixture-repo/tools/: cron.py
scripts/: check_hotpath_panics.sh  hotpath_panic_baseline.txt
src/: config.rs  demo.rs  envelope.rs  lib.rs  main.rs  mcp.rs  secrets.rs  seed.rs  skill.md  store.rs  tools.rs  ui.html  ui.rs  update.rs  util.rs
src/index/: extract.rs  fqn.rs  graph.rs  lang.rs  mod.rs
src/memory/: anchor.rs  mod.rs  recall.rs
tests/: anchor_golden.rs  archival.rs  docs_in_sync.rs  entropy_calibration.rs  index_langs.rs  map_lineage.rs  mcp_integration.rs  memory_api.rs  portability_config.rs  recall_eval.rs  recall_ledger.rs  recall_quality.rs
