[package]
name = "limpet"
version = "0.13.0"
edition = "2021"
description = "small shell. long memory. Memory for AI coding agents that goes stale when your code does: AST-anchored, evidence-verified, local MCP server, zero network calls."
license = "MIT"
repository = "https://github.com/KSym04/limpet"
readme = "README.md"
keywords = ["mcp", "memory", "code-intelligence", "ai-agents", "tree-sitter"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
ignore = "0.4"
tree-sitter = "0.25"
tree-sitter-php = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-cpp = "0.23"
ureq = { version = "2", default-features = false, features = ["tls"] }
self-replace = "1"
tree-sitter-go = "=0.25.0"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-bash = "0.25.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
